ya puse todo rosa

--- a/miEstilo.css
+++ b/miEstilo.css
@@ -6,7 +6,7 @@
     font-size: 12px;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    color: rgb(29, 29, 54);
+    color: pink
 }
 
 .encabezado{
