--- a/miEstilo.css
+++ b/miEstilo.css
@@ -6,7 +6,7 @@
     font-size: 12px;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    color: pink
+    color: #1d1d36;
 }
 
 .encabezado{
