--- a/miEstilo.css
+++ b/miEstilo.css
@@ -141,3 +141,34 @@
 .encabezado .encabezado-iconos .iconos-youtube{
     background-image: url("./img/youtube.png");
 }
+
+header .encabezado-nav{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 45px;
+    background-color: #1d1d36;
+}
+
+header .encabezado-nav ul{
+    width: 65%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+header .encabezado-nav ul li{
+    list-style: none;
+    text-decoration: none;
+    font-weight: lighter;
+    font-size: 16px;
+    color: aliceblue;
+    cursor: pointer;
+}
+
+header .encabezado-nav ul li:hover{
+    color: #a4a3e7;
+    transition: all;
+    transition-timing-function: ease;
+    transition-duration: 0.5s;
+}
